# fastHttpServer

./: CMakeLists.txt  Dockerfile  README.md  a.out  main.c  main.sh
etc/: httpd.conf
include/: config.h  file_system.h  http.h  log.h  server.h
src/: config.c  file_system.c  http.c  log.c  main.c  server.c
